--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "desmos-react": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "recoil": "^0.7.7"
