--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@types/node": "^18.15.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
@@ -28,5 +29,8 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
