--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["desmos"]
+    "types": ["desmos", "node"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
