--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "axios": "^1.3.5",
     "desmos-react": "^1.2.0",
+    "katex": "^0.16.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "suneditor": "^2.44.12"
   },
   "devDependencies": {
+    "@types/katex": "^0.16.0",
     "@types/node": "^18.15.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
