--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "axios": "^1.3.5",
@@ -21,6 +23,14 @@
     "suneditor": "^2.44.12"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.0.9",
+    "@storybook/addon-interactions": "7.0.9",
+    "@storybook/addon-links": "7.0.9",
+    "@storybook/addon-styling": "^1.0.6",
+    "@storybook/blocks": "7.0.9",
+    "@storybook/react": "7.0.9",
+    "@storybook/react-vite": "7.0.9",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@types/katex": "^0.16.0",
     "@types/node": "^18.15.12",
     "@types/react": "^18.0.28",
@@ -28,7 +38,10 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "msw": "^1.2.1",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
+    "prop-types": "15.8.1",
+    "storybook": "7.0.9",
+    "storybook-addon-react-router-v6": "^0.3.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
